provide services and interceptors

--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,13 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- bootstrap css -->
   <link href="//netdna.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" />
-
+  <style>
+    a { cursor: pointer }
+  </style>
 </head>
+<!--The main index.html file is the initial page loaded by the browser that kicks everything off-->
+<!--Webpack bundles all of the javascript files together and injects them into the body of the index.html page so the scripts get loaded and executed by the browser.-->
 <body>
-  <app-root></app-root>
+  <app-root>loading...</app-root>
 </body>
 </html>
